tests/paczka1/small_fuzzy/82518753.err
Error in line 6: I9COB A412 37,9
Error in line 9: uKews26K3pe S654 19,1
